# goodnet

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  README.ru.md  SECURITY.md  flake.nix  pytest.ini
apps/: CMakeLists.txt  README.md
apps/goodnet/: CMakeLists.txt  README.md  main.cpp  subcommands.hpp
apps/goodnet-ssh/: CMakeLists.txt  README.md  identity.cpp  identity.hpp  main.cpp  mode_bridge.cpp  mode_listen.cpp  mode_wrap.cpp  modes.hpp  peers.cpp  peers.hpp  pipe.cpp  pipe.hpp
apps/goodnet/subcommands/: identity.cpp  run.cpp  version.cpp
apps/goodnetd/: CMakeLists.txt  README.md  main.cpp  subcommands.hpp
apps/goodnetd/subcommands/: config_validate.cpp  identity.cpp  manifest_gen.cpp  plugin_hash.cpp  run.cpp  version.cpp
apps/gssh/: CMakeLists.txt  README.md  identity.cpp  identity.hpp  main.cpp  mode_bridge.cpp  mode_listen.cpp  mode_wrap.cpp  modes.hpp  peers.cpp  peers.hpp  pipe.cpp  pipe.hpp
bench/: CMakeLists.txt  README.md  bench_harness.cpp  bench_harness.hpp  carrier_bridges.hpp  test_bench_helper.hpp  test_bench_showcase.hpp
bench/comparison/: README.md
bench/comparison/p2p/: README.md
bench/comparison/reports/: aggregate.py  showcase_aggregate.py
bench/comparison/runners/: binary_sizes.sh  comparison_weights.sh  dx_loc_count.sh  iperf3_tcp.sh  iperf3_udp.sh  iroh.sh  libp2p_rs.sh  run_all.sh  socat_unix.sh  tls_handshake.sh
bench/comparison/setup/: 01_openssl.sh  02_iperf3.sh  03_libuv.sh  04_libssh.sh  05_openssl_demos.sh  06_libp2p_rs.sh  07_iroh.sh
bench/composition/: bench_noise.cpp  bench_wss_over_tls.cpp
bench/plugins/: bench_dtls.cpp  bench_ice.cpp  bench_ipc.cpp  bench_quic.cpp  bench_real_e2e.cpp  bench_tcp.cpp  bench_tcp_scale.cpp  bench_tls.cpp  bench_udp.cpp  bench_ws.cpp
bench/reports/: 0c90f2e.md  7610702.md  7ccf164.md  80d2a04.md  a76513b.md  b231d47.md  bc264da.md  c2ed113.md
bench/showcase/: CMakeLists.txt  README.md  bench_showcase.cpp
bench/strategy/: bench_float_send_rtt.cpp
core/: CMakeLists.txt  README.md
core/config/: config.cpp  config.hpp
core/crypto/: crypto_worker_pool.cpp  crypto_worker_pool.hpp
core/identity/: attestation.cpp  attestation.hpp  derive.cpp  derive.hpp  keypair.cpp  keypair.hpp  node_identity.cpp  node_identity.hpp  rotation.cpp  rotation.hpp  sub_key_registry.cpp  sub_key_registry.hpp
core/kernel/: attestation_dispatcher.cpp  attestation_dispatcher.hpp  capability_blob.cpp  capability_blob.hpp  conn_event.hpp  connection_context.cpp  connection_context.hpp  core_c.cpp  core_c_internal.hpp  host_api_builder.cpp  host_api_builder.hpp  host_api_internal.hpp  identity_set.hpp  kernel.cpp  kernel.hpp  metrics_registry.cpp  metrics_registry.hpp  phase.hpp  plugin_anchor.hpp  plugin_context.hpp  router.cpp  router.hpp  safe_invoke.hpp  service_resolver.cpp  service_resolver.hpp  system_handler_ids.hpp  test_bench_helper.hpp  test_bench_showcase.hpp  timer_registry.cpp  timer_registry.hpp
core/kernel/host_api/: control.cpp  identity.cpp  internal.cpp  messaging.cpp  notifications.cpp
core/memory/: buffer_pool.hpp
core/plugin/: dl_compat.hpp  plugin_manager.cpp  plugin_manager.hpp  plugin_manifest.cpp  plugin_manifest.hpp  remote_host.cpp  remote_host.hpp  static_registry.hpp  static_registry_default.cpp  wire_codec.cpp  wire_codec.hpp
core/registry/: connection.cpp  connection.hpp  extension.cpp  extension.hpp  handler.cpp  handler.hpp  link.cpp  link.hpp  protocol_layer.cpp  protocol_layer.hpp  security.cpp  security.hpp  send_queue.cpp  send_queue.hpp  spsc_ring.hpp  transport.cpp  transport.hpp
core/security/: inline_crypto.cpp  inline_crypto.hpp  session.cpp  session.hpp
core/signal/: signal_channel.hpp
core/util/: endian.hpp  log.cpp  log.hpp  log_config.cpp  log_config.hpp  placeholder.cpp  token_bucket.hpp  uri_query.hpp
examples/bench/: CMakeLists.txt  main.cpp
examples/two_node/: CMakeLists.txt  README.md  main.cpp
plugins/: CMakeLists.txt
plugins/handlers/heartbeat/: CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  heartbeat.cpp  heartbeat.hpp  plugin_entry.cpp
plugins/handlers/store/: CMakeLists.txt  README.md  plugin_entry.cpp  store.cpp  store.hpp
plugins/workers/: CMakeLists.txt
sdk/: CMakeLists.txt  README.md  abi.h  conn_events.h  connection.h  convenience.h  core.h  endpoint.h  handler.h  host_api.h  identity.h  limits.h  link.h  log.h  metrics.h  plugin.h  protocol.h  security.h  transport.h  trust.h  types.h
sdk/cpp/: capability_tlv.hpp  config.hpp  connect.hpp  connection.hpp  convenience.hpp  dns.hpp  endian.hpp  handler.hpp  handler_plugin.hpp  link.hpp  link_carrier.hpp  link_plugin.hpp  log.hpp  openssl_diag.hpp  per_conn_map.hpp  protocol_layer.hpp  remote_plugin.cpp  remote_plugin.hpp  strategy_plugin.hpp  subscription.hpp  token_bucket.hpp  transport.hpp  transport_plugin.hpp  types.hpp  uri.hpp  wire.hpp
sdk/extensions/: dns.h  heartbeat.h  link.h  optimizer.h  store.h  strategy.h  transport.h  ui.h  ui_event.h
sdk/remote/: slots.h  wire.h
tests/: CMakeLists.txt  README.md
tests/abi/: CMakeLists.txt  test_core_c_layout.c  test_cross_version.cpp  test_layout.c
tests/aggregator/: test_showcase_aggregator.py
tests/integration/: CMakeLists.txt  test_apps_goodnet.cpp  test_backpressure.cpp  test_backpressure_role.cpp  test_config_reload.cpp  test_conn_events.cpp  test_core_c.cpp  test_host_api_chain.cpp  test_inbound_chain.cpp  test_inject_api.cpp  test_inject_limits.cpp  test_link_extension_api.cpp  test_link_teardown_conformance.cpp  test_metrics_thunks.cpp  test_noise_tcp_e2e.cpp  test_plugin_teardown.cpp  test_send_loopback.cpp  test_trust_class_metric.cpp
tests/livedoc/: conftest.py  test_abi_extract.py  test_config_keys.py  test_inventory.py  test_markdown_inject.py  test_metrics_catalog.py  test_renderers.py  test_rfc_coverage.py  test_roadmap_status.py  test_test_inventory.py
tests/support/: test_self_signed_cert.hpp
tests/unit/: CMakeLists.txt
tests/util/: log_capture.hpp  protocol_setup.hpp
(+453 files in other folders)
